--- a/Porgetto_Sad.Rmd
+++ b/Porgetto_Sad.Rmd
@@ -632,7 +632,7 @@ p5 <- p5 + theme(panel.background = element_rect(fill = '#f0e2a8', color = '#9a8
 p5
 ```
 
-Dal grafico possiamo osservare sulle ascisse i tipi di veicoli,
+Dal grafico possiamo osservare sulle ascisse i tipi di veicoli.
 
 #### Grafico a dispersione
 
@@ -731,7 +731,6 @@ p9 <- ggplot(data = mpg, mapping = aes(cyl)) + geom_bar(stat = "count", fill= "w
 p9 <- p9 + theme(panel.background = element_rect(fill = '#f0e2a8', color = "#9a8262"), panel.grid.major = element_line(color = '#ffffff', linetype="longdash"),panel.grid.minor = element_line(color = '#fff68f', size = 0.7,linetype = "dotdash"))
 
 p9
-
 ```
 
 Nel grafico, "cyl" sarà mostrata sull'asse delle ascisse e il numero di
@@ -879,6 +878,8 @@ p15 <- p15 + theme(panel.background = element_rect(fill = '#f0e2a8', color = '#9
 p15
 ```
 
+#### 
+
 ### Variabile Cty
 
 La variabile Cty rappresenta il consumo di carburante in città, in
@@ -932,10 +933,26 @@ p18 <- p18 + theme(panel.background = element_rect(fill = '#f0e2a8', color = '#9
 p18
 ```
 
-Osservando lo scatterplot possiamo affermare che le auto con un numero
+Osservando lo scatter plot possiamo affermare che le auto con un numero
 di cilindri pari a *4 e 5* riescono a percorrere più miglia con un
 gallone in città mentre le auto con *6* e *8* cilindri riescono a
 percorrere meno miglia per gallone in zona urbana.
+
+#### Istogramma
+
+Utilizziamo la funzione **`cut()`** per raggruppare i dati e creare un
+istogramma con degli intervalli scelti.
+
+```{r}
+fcut <- table (cut ( mpg$cty, breaks = c(12,14,17,20,35) ))
+fcut
+```
+
+Gli intervalli sono scelti in modo da essere abbastanza equi.
+
+```{r}
+barplot(fcut, col = rainbow(4), xlab = "miglia per gallone", main = "Grafico miglia per gallone", ylab = "n.osservazioni")
+```
 
 ### Variabile Hwy
 
@@ -1044,6 +1061,27 @@ Possiamo notare che la maggiore parte delle auto presenti nel set di
 riferimento, circa il 72%, usa il gasolio regolare per viaggiare, il 22%
 si rifornisce con il carburante premium ed il restante 6% delle auto con
 gli altri combustibili: elettricità, diesel o carburante normale.
+
+#### Grafico frequenze relative cumulative
+
+Le frequenze assolute cumulative sono il numero di osservazioni di una
+variabile che sono inferiori o uguali a un determinato valore
+In R, utilizziamo la funzione **`cumsum()`** per calcolare le frequenze
+assolute cumulative di una variabile.
+
+```{r}
+fac <- cumsum(table(mpg$fl)/length(mpg$fl))
+names(fac) <- c("Normal_gasoline", "Diesel", "Elettricity", "Premium_Gasoline", "Regular gas")
+
+plot(fac, type = "s", main = "FRC Carburante", ylim = c(-0.5,1.3), xlab= "Tipo di carburante")
+```
+
+Il grafico a gradini mostra il numero di automobili con trasmissione
+"fl" che sono presenti nel dataset e che hanno una trasmissione di tipo
+uguale o inferiore a quello indicato sull'ascissa. Ad esempio, il primo
+segmento orizzontale del grafico rappresenta il numero di automobili con
+trasmissione "manual", mentre il secondo segmento orizzontale
+rappresenta il numero di automobili con trasmissione "manual" o "auto".
 
 ### Variabile Class
 
