--- a/Porgetto_Sad.Rmd
+++ b/Porgetto_Sad.Rmd
@@ -1769,3 +1769,5 @@ permane al suo interno per sempre. I metodi non gerarchici non
 presentano questo problema poiché consentono di riallocare gli individui
 precedentemente classificati, ma richiedono una scelta opportuna della
 configurazione iniziale.
+
+# Parte Seconda
